--- a/informe_final.tex
+++ b/informe_final.tex
@@ -86,12 +86,11 @@
 \end{titlepage}
 \newpage
 \tableofcontents
-\newpage
 
 \section{Introducción}
 
 \section{Actores y Roles}
-\subsection}{Estructura Organizacional}
+\subsection{Estructura Organizacional}
 \subsection{Especificación de los Actores}
 \subsection{Descripción de Roles}
 
