--- a/informe_final.tex
+++ b/informe_final.tex
@@ -91,33 +91,57 @@ Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in
 \tableofcontents
 
 \section{Introducción}
+Natural Response es una empresa joven, la cual se encarga de procesar y exportar productos naturales extraidos sustentablemente de la flora chilena, tales como el árbol del quillay. Esta empresa ha entrado a un mercado que exige altos estándares de calidad, y ha sabido responder a los requisitos comerciales del exigente mercado de las empresas proveedoras de materias primas y de productos procesados a nivel mundial.\\
+Actualmente la empresa se encuentra posicionada dentro de las mejores a nivel mundial abarcando cerca del 80\% del mercado mundial, por lo cual es de interés conocer qué procesos de negocio han llevado al éxito a esta joven empresa. Estudiaremos los procesos de adquisición de productos y de la selección de proveedores; estamos hablando de procesos críticos para la empresa, ya que la mayor parte de sus ingresos se deben a exportaciones al extranjero, los cuales exigen estándares de calidad tales como la norma ISO 9000:2008, la cual asegura la calidad de los productos y de los proveedores de sus implementos de producción. Es decir, el área de estudio de este documento es el área de producción y ventas.\\
+
+
 
 \section{Actores y Roles}
+
 \subsection{Estructura Organizacional}
+
+\includepdf[angle=90,page=1]{organigrama_nr.pdf}
+
 \subsection{Especificación de los Actores}
+
 \subsection{Descripción de Roles}
 
 \section{Procesos}
 
 \section{Nombre de proceso 1}
+
 \subsection{Definición del Proceso}
+
 \subsubsection{Actores Involucrados}
+
 \subsection{Entradas y Salidas}
+
 \subsection{Indicadores del Proceso}
+
 \subsection{Modelo EPC}
+
 \subsection{Recomendaciones}
 
 \section{Nombre de proceso 2}
+
 \subsection{Definición del Proceso}
+
 \subsubsection{Actores Involucrados}
+
 \subsection{Entradas y Salidas}
+
 \subsection{Indicadores del Proceso}
+
 \subsection{Modelo EPC}
+
 \subsection{Recomendaciones}
 
 \section{Conclusiones}
+
 \subsection{Conclusiones Técnicas}
+
 \subsection{Conclusión de Neil García}
+
 \subsection{Conclusión de Victor Gonzalez}
 
 \section{Recomendaciones}
