--- a/informe_final.tex
+++ b/informe_final.tex
@@ -94,13 +94,21 @@ Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in
 Natural Response es una empresa joven, la cual se encarga de procesar y exportar productos naturales extraidos sustentablemente de la flora chilena, tales como el árbol del quillay. Esta empresa ha entrado a un mercado que exige altos estándares de calidad, y ha sabido responder a los requisitos comerciales del exigente mercado de las empresas proveedoras de materias primas y de productos procesados a nivel mundial.\\
 Actualmente la empresa se encuentra posicionada dentro de las mejores a nivel mundial abarcando cerca del 80\% del mercado mundial, por lo cual es de interés conocer qué procesos de negocio han llevado al éxito a esta joven empresa. Estudiaremos los procesos de adquisición de productos y de la selección de proveedores; estamos hablando de procesos críticos para la empresa, ya que la mayor parte de sus ingresos se deben a exportaciones al extranjero, los cuales exigen estándares de calidad tales como la norma ISO 9000:2008, la cual asegura la calidad de los productos y de los proveedores de sus implementos de producción. Es decir, el área de estudio de este documento es el área de producción y ventas.\\
 
-
-
 \section{Actores y Roles}
+\begin{itemize}
+\item{\textbf{Gerente de Administración y Recursos Humanos:}} 
+\item{Gerente de Planta}
+\item{Gerente de Producción}
+\item{Jefe de Control de Calidad}
+\item{Gerente General}
+\item{Gerente/Jefe de Area}
+\end{itemize}
 
 \subsection{Estructura Organizacional}
+La empresa Natural Response, tiene una estructura jerárquica de responsabilidades, donde existen 7 niveles
 
-\includepdf[angle=90,page=1]{organigrama_nr.pdf}
+\subsubsection{Organigrama de Natural Response}
+\includegraphics[angle=90,page=1,height=\textheight]{organigrama_nr.pdf}
 
 \subsection{Especificación de los Actores}
 
