--- a/informe_final.tex
+++ b/informe_final.tex
@@ -151,19 +151,57 @@ Los resultados se evalúan en una escala del 1 al 5, siendo 1 un proveedor muy a
 \subsection{Recomendaciones}
 Se recomienda que la empresa busque nuevas métricas para los indicadores de este proceso, que representen de mejor manera las características que busca la empresa en un proveedor, ya que este punto es crítico para su éxito en el mercado mundial, el cual exige altos estándares de calidad.
 
-\section{Nombre de proceso 2}
+\section{Proceso de Adquisiciones}
 
 \subsection{Definición del Proceso}
+Como en todo negocio o empresa, Natural Response necesita adquirir los elementos necesarios para su correcta operación, tales como insumos y materias primas necesarios para la manufacturación de sus productos, así como servicios y otros elementos que necesiten para la correcta operación de las distintas unidades de la empresa.
+
+Como en todo proceso donde se incluye la manipulación de dinero, en Natural Response se realiza un proceso detallado para todas las compras e importaciones que necesitan para las distintas unidades, con personal debidamente autorizado y documentos detallados para todos los procedimientos.
 
 \subsubsection{Actores Involucrados}
+\begin{itemize}
+\item Encargado de Adquisiciones
+\item Solicitante de la adquisición
+\item Autorizador de la adquisición
+\item Proovedor
+\item Contador General
+\item Encargado de Comercio Exterior
+\end{itemize}
+
+\subsubsubsection{Solicitantes de Adquisición Autorizados:}
+\begin{itemize}
+\item Gerente de Planta
+\item Gerente de Producción
+\item Gerente de I\&D
+\item Gerente de Administración y Rrhh
+\item Director de Calidad
+\item Jefe de Control de Calidad
+\item Jefes de Producción
+\item Jefe de Mantención
+\item Encargado de Adquisiciones
+\item Ingeniero Forestal
+\end{itemize}
+
+\subsubsubsection{Autorizadores de la Adquisición}
+\begin{itemize}
+\item Gerente de Planta
+\item Gerente de Administración y RRHH
+\item Gerente de Producción
+\end{itemize}
 
 \subsection{Entradas y Salidas}
+\begin{itemize}
+\item \textbf{Entrada:} Orden de Compra requerida por el Solicitante de Adquisiciones y autorizada por el Autorizador de Adquisiciones
+\item \textbf{Salida:} Factura o Guía de Despacho debidamente recepcionada y timbrada.
+\end{itemize}
 
 \subsection{Indicadores del Proceso}
+Tiempo de procesamiento de orden, tiempo de despacho, satisfacción del cliente.
 
 \subsection{Modelo EPC}
 
 \subsection{Recomendaciones}
+Se recomienda a Natural Response agregar sistemas informáticos para el manejo y control de las órdenes de compra, ya que el proceso no está completamente automatizado. Así mismo, también se recomienda poder asignar mayor cantidad de personal responsable para la aceptación de las órdenes de compra, ya que tener pocas personas autorizadas hace más lento el procedimiento.
 
 \section{Conclusiones}
 Los procesos de Natural Response responden correctamente a las normas establecidas por los estándares del mercado, lo cual Natural Response ha sabido aprovechar para tomar una posición dominante del mercado de materias primas extraidas sustentablemente de flora exótica.\\
