--- a/informe_final.tex
+++ b/informe_final.tex
@@ -114,8 +114,14 @@ La estructura además contempla la inclusión horizontal a nivel gerencial de co
 \includegraphics[angle=90,page=1,height=\textheight - 40px]{organigrama_nr.pdf}
 
 \subsection{Especificación de los Actores}
+Los actores principales son los jefes y gerentes de Natural Response, ya que los procesos residen en la toma de decisiones de parte de este grupo de personas. Algunos de estos son: Gerentes de Área (Gerente de Planta, Gerente de Finanzas, etc.), Jefe de Adquisiciones, Gerente General y un par más que se identifican más claramente en cada proceso.
 
 \subsection{Descripción de Roles}
+Los roles que se pueden observar son basicamente 2:
+\begin{itemize}
+\item \textbf{Jefes/Gerentes:} Se dedican a la toma de decisiones, notificación de sucesos importantes y a controlar procesos.
+\item \textbf{Solicitantes:} Se trata de todos aquellos actores que se dedican a solicitar acciones por parte de la empresa. No intervienen en los procesos, solo los gatillan o los finalizan.
+\end{itemize}
 
 \section{Procesos}
 
@@ -147,6 +153,7 @@ La empresa utiliza un sistema de evaluación basado en calificación de caracter
 Los resultados se evalúan en una escala del 1 al 5, siendo 1 un proveedor muy alejado de las características esperadas, y 5 un proveedor con las características perfectas al perfil de la empresa.
 
 \subsection{Modelo EPC}
+\includegraphics[angle=90,page=1,height=\textheight - 40px]{proveedores.pdf}
 
 \subsection{Recomendaciones}
 Se recomienda que la empresa busque nuevas métricas para los indicadores de este proceso, que representen de mejor manera las características que busca la empresa en un proveedor, ya que este punto es crítico para su éxito en el mercado mundial, el cual exige altos estándares de calidad.
@@ -199,6 +206,7 @@ Como en todo proceso donde se incluye la manipulación de dinero, en Natural Res
 Tiempo de procesamiento de orden, tiempo de despacho, satisfacción del cliente.
 
 \subsection{Modelo EPC}
+\includegraphics[angle=90,page=1,height=\textheight - 40px]{adquisicion.pdf}
 
 \subsection{Recomendaciones}
 Se recomienda a Natural Response agregar sistemas informáticos para el manejo y control de las órdenes de compra, ya que el proceso no está completamente automatizado. Así mismo, también se recomienda poder asignar mayor cantidad de personal responsable para la aceptación de las órdenes de compra, ya que tener pocas personas autorizadas hace más lento el procedimiento.
@@ -211,6 +219,9 @@ Además, los procesos llevados a cabo por la empresa, están claramente definido
 Podemos decir que Natural Response, ha sabido definir sus procesos de negocio críticos para el mercado en el que se desenvuelve, dejandolos en posición dominante del mercado, cumpliendo los altos estándares que sus clientes les exigen para ingresar al mercado internacional.
 
 \subsection{Conclusión de Neil García}
+Me pareció interesante ver la forma en que funcionan los procesos en una empresa real, y pasar del papel a la práctica. Natural Response tiene fuertes procesos de negocios, que deben cumplir altos estándares y exigentes normas internacionales, que los permite mantenerse dentro de una posición aventajada en el mercado.
+
+Además, es interesante ver como ciertos sistemas informáticos podrían ayudar notablemente ciertos procesos. Por lo cual se han agregado las correspondientes recomendaciones a la empresa.
 
 \subsection{Conclusión de Victor Gonzalez}
 Me ha tocado ver de cerca la puesta en práctica de estos procesos, y la teoría elaborada acá representa fielmente la práctica de la empresa, lo cual demuestra el alto compromiso con la calidad de sus procesos productivos. Sus procesos productivos son muy eficientes, y es por esto que se han establecido de manera tan firme en el mercado: la calidad de sus productos, la certificación y el aseguramiento de la calidad respaldan la solidez de sus procesos.\\
